[package]
name = "bitcoin-key-hunter"
version = "0.2.0"
edition = "2021"

[dependencies]
bs58 = "0.5"
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
crossbeam = "0.8"
hex = "0.4"
num-bigint = "0.4"
num-cpus = "1.16"  # Hyphenated
once_cell = "1.18"
parking_lot = "0.12" # For faster mutex in sequential mode
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.8"
ripemd = "0.1"
secp256k1 = { version = "0.28", features = ["global-context", "rand-std", "bitcoin_hashes"] } # Underscore feature
sha2 = "0.10"
# thread-id = "4.0" # Removed - not used

[profile.release]
lto = "fat"
# codegen-units = 1
